# cp-mec-170730

etc/us-states-map/election/: .gitignore  election2.gnu  note
etc/us-states-map/us-state-map/: us-states-map.gnuplot
motivation/access-locations-most-freq-accessed-videos/: loc.gnuplot  plot.py
motivation/access-locations-most-freq-accessed-videos/gen-data/: CMakeLists.txt
motivation/cluster-and-plot-video-acc-locs/: access-loc-with-centroids.gnuplot  cluster-and-plot-video-acc-locs.py
motivation/gen-towermap-ts-loc/: TowerData.py  TowerMaps_Dec_2016.schema  TowerMaps_Dec_2016_COPYRIGHTEDuncompressed.schema  export-csv.sh  pgdb_FCC_ASR_December_2016.schema  plot-num-towers-by-time.py  select-ts-loc.sh
motivation/num-accesses-by-videos/: CMakeLists.txt  build-and-run.sh  note
motivation/num-accesses-by-videos/one-time-use/gen-twitter-uids/: CMakeLists.txt
motivation/num-accesses-by-videos/one-time-use/gen-twitter-uids/src/: conf.cpp  youtube-data.cpp
motivation/num-accesses-by-videos/src/: conf.cpp  conf.h  op.cpp  (+5 more)
motivation/num-towers-by-dateaction/: TowerData.py  numtowers-by-timeaction.gnuplot  plot-num-towers-by-dateaction.py  towerloc-by-timeaction-anigif.gnuplot  towerloc-by-timeaction.gnuplot
motivation/video-acc-locs-clustered/: .gitignore  access-loc-with-centroids.gnuplot  dist-distribution.py
motivation/video-acc-locs-clustered-with-diff-colors/: Stat.py  access-loc-with-centroids.gnuplot  video-acc-dist.py
motivation/video-acc-locs-dist-from-center/: dist-cdf.gnuplot  video-acc-dist.py
placement/: CMakeLists.txt  build-and-run.sh  note
(+85 files in other folders)
